# warp

./: AGENTS.md  Cargo.toml  README.md  WARP.md  flake.nix
.github/: STAKEHOLDERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_ssh_tmux.yml  04_ssh_legacy.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: cherrypick.md  feature_flag.md
.github/actions/bundle_arch_package/: Dockerfile
.github/actions/get_channel_config/: action.yml
.github/actions/prepare_environment/: action.yml
.github/workflows/: README.md  ci.yml  release_configurations.json
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  app_state.rs  appearance.rs  crash_recovery.rs  debug_dump.rs  font_fallback.rs  interaction_sources.rs  lib.rs  profiling.rs  root_view.rs  tab.rs  wasm_nux_dialog.rs
crates/ai/: Cargo.toml
crates/app-installation-detection/: Cargo.toml
crates/command/: Cargo.toml
crates/computer_use/: Cargo.toml
crates/editor/: Cargo.toml
crates/fuzzy_match/: Cargo.toml
crates/graphql/: Cargo.toml
crates/graphql/src/: client.rs  lib.rs
crates/graphql/src/api/: billing.rs  experiment.rs  generic_string_object.rs  mod.rs  workspace.rs
crates/graphql/src/api/mutations/: create_anonymous_user.rs  create_team.rs  mod.rs  update_user_settings.rs  update_workspace_settings.rs
crates/graphql/src/api/queries/: get_user.rs  get_user_settings.rs  get_workspaces_metadata_for_user.rs  mod.rs
crates/http_client/: Cargo.toml
crates/http_server/: Cargo.toml
crates/input_classifier/: Cargo.toml
crates/integration/: Cargo.toml
crates/integration/src/: test.rs
crates/integration/src/test/: ai_assistant.rs  pane_restoration.rs  remote_server.rs  session_restoration.rs  ssh.rs  subshell.rs  workflows.rs
crates/integration/tests/integration/: ui_tests.rs
crates/ipc/: Cargo.toml
crates/isolation_platform/: Cargo.toml
crates/languages/: Cargo.toml
crates/lsp/: Cargo.toml
crates/managed_secrets/: Cargo.toml
crates/markdown_parser/: Cargo.toml
crates/natural_language_detection/: Cargo.toml  stack_overflow.txt
crates/node_runtime/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/prevent_sleep/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/repo_metadata/: Cargo.toml
crates/repo_metadata/src/: lib.rs  local_model.rs  repositories.rs
crates/serve-wasm/: Cargo.toml
crates/simple_logger/: Cargo.toml
crates/string-offset/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/syntax_tree/: Cargo.toml
crates/vim/: Cargo.toml
crates/virtual_fs/: Cargo.toml
crates/warp_cli/: Cargo.toml
crates/warp_completer/: Cargo.toml
crates/warp_core/: Cargo.toml
crates/warp_files/: Cargo.toml
crates/warp_graphql_schema/: graphql.config.js
crates/warp_js/: Cargo.toml
crates/warp_ripgrep/: Cargo.toml
crates/warp_terminal/: Cargo.toml
crates/warp_util/: Cargo.toml
crates/warpui/: Cargo.toml
crates/warpui_core/: Cargo.toml
crates/warpui_extras/: Cargo.toml
crates/watcher/: Cargo.toml
crates/websocket/: Cargo.toml
script/: bootstrap  compile_icon  deploy_remote_server  install_cargo_bundle  install_channel_config  prepare_bundled_resources  resolve_common_skills  run
script/font_fallback/: generate-families.py  generate-mappings.py
script/linux/: bootstrap  bundle  bundle_appimage  bundle_arch  bundle_deb  bundle_rpm  install_test_deps  linuxdeploy-plugin-warp
script/macos/: bootstrap  bundle  run
script/wasm/: bundle  install_build_deps
script/windows/: bootstrap.ps1  bundle.ps1  prepare_bundled_resources.ps1  windows-installer.iss
specs/APP-3645/: TECH.md
specs/APP-3736/: TECH.md
specs/APP-3773/: PRODUCT.md  TECH.md
specs/APP-3790/: TECH-remote-apply-diff.md
specs/APP-3801/: PRODUCT.md
specs/APP-3872/: PRODUCT.md
specs/APP-3891/: TECH.md
specs/APP-3908/: TECH.md
specs/APP-4005/: PRODUCT.md  TECH.md
specs/APP-4068/: TECH.md
specs/APP-4080/: TECH.md
specs/APP-4104/: TECH.md
specs/APP-4106/: PRODUCT.md  TECH.md
specs/APP-4114/: TECH.md
specs/APP-4115/: PRODUCT.md  TECH.md
specs/APP-4118/: PRODUCT.md  TECH.md
specs/APP-4154/: TECH.md  nsstring_checklist.md  objc_checklist.md
specs/APP-4188/: TECH.md
specs/APP-4199/: PRODUCT.md  TECH.md
specs/APP-4217/: TECH.md
specs/APP-4283/: TECH.md
specs/APP-4318/: TECH.md
specs/GH10090/: tech.md
specs/GH1063/: product.md  tech.md
specs/GH478/: tech.md
specs/GH703/: product.md  tech.md
specs/QUALITY-512-ask-user-question-speedbump/: PRODUCT.md  TECH.md
specs/QUALITY-657/: TECH.md
specs/REMOTE-1254/: TECH.md
specs/REMOTE-1289/: TECH.md
specs/REMOTE-1420/: TECH.md
specs/REMOTE-1454/: TECH.md
specs/REMOTE-1455/: TECH.md
specs/REMOTE-1457/: PRODUCT.md  TECH.md
specs/REMOTE-1458/: TECH.md
specs/REMOTE-1459/: TECH.md
specs/common-skills-installation/: TECH.md
specs/gh-10207/: TECH.md
(+722 files in other folders)
