[package]
authors = ["Local-first Warp fork contributors"]
edition = "2021"
name = "warp_graphql"
version = "0.1.0"
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cynic.workspace = true
http_client.workspace = true
http.workspace = true
instant.workspace = true
persistence.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
warp_core.workspace = true
warp_graphql_schema.workspace = true

[dev-dependencies]
http_client = { workspace = true, features = ["test-util"] }

[build-dependencies]
anyhow.workspace = true
cynic-codegen.workspace = true

[features]
# Enables utilities for testing.
test-util = []
