[package]
edition = "2021"
name = "integration"
version = "0.1.0"
publish.workspace = true
license.workspace = true

[[bin]]
name = "integration"
path = "src/bin/integration.rs"
# The integration test binary does not, itself, have any tests.
test = false

[dependencies]
anyhow = "1.0"
cfg-if.workspace = true
chrono.workspace = true
clap.workspace = true
command.workspace = true
directories.workspace = true
itertools.workspace = true
float-cmp.workspace = true
instant.workspace = true
lazy_static = "1.4.0"
log = { version = "0.4", features = ["serde"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
pathfinder_geometry.workspace = true
regex.workspace = true
rust-embed.workspace = true
serde_json.workspace = true
settings.workspace = true
strum.workspace = true
strum_macros.workspace = true
sum_tree.workspace = true
version-compare.workspace = true
warp = { workspace = true, features = ["integration_tests"] }
warp_cli = { workspace = true, features = ["integration_tests"] }
warp_core.workspace = true
warp_multi_agent_api.workspace = true
warpui.workspace = true
warpui_extras = { workspace = true, features = [
    "user_preferences-file",
] }
whoami = "1.5.2"

[dev-dependencies]
command = { workspace = true, features = ["test-util"] }
warpui = { workspace = true, features = ["integration_tests"] }
warp_core = { workspace = true, features = ["test-util"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
sysinfo.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["user", "signal"] }

[features]
run_on_linux = []
drag_tabs_to_windows = ["warp/drag_tabs_to_windows"]
default = ["run_on_linux"]
