[package]
name = "repo_metadata"
authors = ["Local-first Warp fork contributors"]
version = "0.1.0"
edition = "2021"
description = "Repository metadata utilities for Warp"
publish.workspace = true
license.workspace = true

[features]
local_fs = []
test-util = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dunce.workspace = true
thiserror.workspace = true
itertools.workspace = true
warpui.workspace = true
warp_core.workspace = true
warp_util.workspace = true
ignore = "0.4.23"
log.workspace = true
futures.workspace = true
cfg-if = "1.0"
dirs.workspace = true
futures-lite.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
notify-debouncer-full.workspace = true
async-fs.workspace = true
watcher.workspace = true

[build-dependencies]
anyhow.workspace = true

[dev-dependencies]
env_logger.workspace = true
futures = "0.3"
virtual-fs.workspace = true
warpui = { workspace = true, features = ["test-util"] }
