[package]
name = "syntax_tree"
version = "0.1.0"
edition = "2021"
authors = ["Local-first Warp fork contributors"]
publish.workspace = true
license.workspace = true

[dependencies]
rangemap.workspace = true
arborium.workspace = true
warpui.workspace = true
warp_editor.workspace = true
languages.workspace = true
futures.workspace = true
futures-lite.workspace = true
parking_lot.workspace = true
string-offset.workspace = true
streaming-iterator = "0.1.9"

[dev-dependencies]
warp_editor = { workspace = true, features = ["test-util"] }
warpui = { workspace = true, features = ["test-util"] }
